fix: DEV-2930: Fix collapsed texts for TextArea (#765)
* Fix collapsed texts for TextArea

* Remove excess space in TextResult


* Remove excess space in ChoicesResult


* Fix typo

--- a/src/components/SidePanels/DetailsPanel/RegionDetails.styl
+++ b/src/components/SidePanels/DetailsPanel/RegionDetails.styl
@@ -67,3 +67,19 @@
         white-space pre-wrap
         line-break loose
         word-break break-all
+
+  &__result
+    display grid
+    grid-template-columns auto 1fr
+    grid-column-gap 10px
+
+  &__value
+    p
+      padding 0
+      margin-bottom 4px
+
+      &::before
+        padding-right 4px
+        display inline-block
+        content attr(data-counter)
+        opacity 0.6
